[package]
authors = ["James Waples <james@wapl.es>"]
categories = ["embedded", "no-std"]
description = "I2C/SPI driver for the SH1106 OLED display controller"
documentation = "https://docs.rs/sh1106"
exclude = [".travis.yml", ".gitignore"]
keywords = ["no-std", "sh1106", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "sh1106-async"
readme = "README.md"
repository = "https://github.com/kalkyl/sh1106-async"
version = "0.5.0"
edition = "2018"

[dependencies]
# embedded-hal = { version = "=1.0.0-rc.1" }
# embedded-hal-async = "1.0.0-rc.1"
embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0"
embedded-graphics-core = { version = "0.4.0", optional = true }

# [dev-dependencies]
# cortex-m = "0.7.3"
# cortex-m-rt = "0.6.10"
# embedded-graphics = "0.8.0"
# heapless = "0.7.10"
# panic-semihosting = "0.5.2"
# cortex-m-rtic = "0.5.9"
# 
# [dev-dependencies.stm32f1xx-hal]
# version = "0.7.0"
# features = [ "rt", "stm32f103" ]

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
